# kitling

./: .travis.yml  Dockerfile  Readme.md  docker-compose-public.yml  docker-compose.yml  requirements.txt
.github/workflows/: ci.yml
comparer/: Cargo.toml  Dockerfile  compare.py  config.toml  log.toml
comparer/src/: main.rs
docs/: architecture.dot  rebuild.sh
frontend/: .gitignore  Dockerfile  manage.py  requirements.in  requirements.txt
frontend/kitling/: settings.py  urls.py  wsgi.py
frontend/static/: clappr.html  flashls.html
frontend/static/libs/: metrics.js
frontend/templates/: display.xml  feed.xml  index.xml
frontend/videos/: admin.py  models.py  serialisers.py  tasks.py  views.py
frontend/videos/migrations/: 0001_initial.py  0002_auto_20151025_1349.py  0003_auto_20151025_1355.py  0004_auto_20151025_1411.py  0005_video_hash.py  0006_auto_20151027_2233.py  0007_auto_20151027_2338.py  0008_auto_20151028_1154.py  0009_feed_description.py  0010_auto_20151028_1622.py  0011_video_streamurl.py  0012_video_offset.py  0013_fix_nulls.py  0014_add_enabled_and_notes.py  0015_add_channel.py  0016_video_channel.py  0017_channel_name.py  0018_video_name.py
imager/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  chromedriver-xvfb.sh  image.py  log.toml  requirements.txt
imager/src/: chromedriver.rs  main.rs
root/: test.py
