[package]
name = "kitling"
version = "0.1.0"
authors = ["Tom Parker <palfrey@tevp.net>"]

[dependencies.img_hash]
git = "https://github.com/cybergeek94/img_hash"
# For interop with `image`:
features = ["rust-image"]

[dependencies]
image = "*"
postgres = {version = "0.10", features=["time"]}
log = "*"
log4rs = "0.3.3"
time = "0.1.33"
hyper = "0.6.15"
url = "0.2.37"
png = "0.3.1"
